[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Weapons/fire.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Weapons/BaseWeapon.gd" type="Script" id=2]
[ext_resource path="res://Assets/Weapons/gun.png" type="Texture" id=3]
[ext_resource path="res://Assets/SoundEffects/gun.mp3" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "default",
"speed": 35.0
} ]

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="BaseWeapon" type="AnimatedSprite" groups=["weapon"]]
z_index = 2
frames = SubResource( 9 )
offset = Vector2( 10, 0 )
script = ExtResource( 2 )

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 15, -2 )
frames = SubResource( 1 )
frame = 4
playing = true
offset = Vector2( 5, -1 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="OutOfAmmo" type="AudioStreamPlayer" parent="."]

[node name="CooldownOutOfAmmo" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 15, -2 )
cast_to = Vector2( 1, 0 )
collision_mask = 34

[node name="Particles" type="Particles2D" parent="."]
position = Vector2( 15, -2 )
emitting = false
process_material = SubResource( 7 )

[connection signal="animation_finished" from="Fire" to="." method="_on_Fire_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="CooldownOutOfAmmo" to="." method="_on_CooldownOutOfAmmo_timeout"]
